[gd_scene load_steps=2 format=3 uid="uid://culdfuk2t3ggq"]

[ext_resource type="Script" path="res://hangman.gd" id="1_m3jw7"]

[node name="Control_gallow_guesser" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_m3jw7")

[node name="Game_title_gallow_guesser" type="Label" parent="."]
layout_mode = 0
offset_left = 535.0
offset_top = 279.0
offset_right = 655.0
offset_bottom = 302.0
text = "Gallow Guesser"
vertical_alignment = 1

[node name="Hangman_sprite" type="Sprite2D" parent="."]

[node name="Timer" type="Timer" parent="."]

[node name="drop_down_menu_button" type="OptionButton" parent="."]
layout_mode = 0
offset_right = 32.0
offset_bottom = 20.0

[node name="alphabet_button" type="Button" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="attempts_left" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="GridContainer_letters" type="GridContainer" parent="."]
layout_mode = 1
offset_right = 40.0
offset_bottom = 40.0

[node name="letter(s)" type="Button" parent="GridContainer_letters"]
layout_mode = 2

[node name="WordContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_left = 100.0
offset_top = 100.0
offset_right = 100.0
grow_horizontal = 2

[node name="game_over_label" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
